--- a/guides/building-agents/using-tools-with-openai-functions.mdx
+++ b/guides/building-agents/using-tools-with-openai-functions.mdx
@@ -1,5 +1,6 @@
 ---
 title: Using MCP Tools with OpenAI Functions/Tools API
+mode: "wide"
 ---
 
 OpenAI's newer models (like GPT-3.5 Turbo, GPT-4, and GPT-4o) support "tool calling" (previously known as function calling). This allows you to describe your tools (functions) to the model, and the model can then output a JSON object indicating it wants to call one or more of those tools with specific arguments.
