--- a/guides/introduction/why-choose-universal-mcp.mdx
+++ b/guides/introduction/why-choose-universal-mcp.mdx
@@ -1,5 +1,6 @@
 ---
 title: Why Choose Universal MCP?
+mode: "wide"
 ---
 
 Universal MCP offers a range of benefits for developers looking to build AI agents that can meaningfully interact with the digital world. Here's why it stands out:
